[package]
name = "uni_stg"
version = "0.1.0"
edition = "2024"

[features]
google_cloud = [
    "google-cloud-storage"
]
aws_s3 = [
    "aws-sdk-s3",
    "aws-config"
]
sftp = []
ftp = []
local = []
azure = []
cloudflare = []

[dependencies]
google-cloud-storage = { version = "0.24.0", optional = true }
aws-config = { version = "1.8.0", optional = true }
aws-sdk-s3 = { version = "1.92.0", optional = true }